# antimony

./: .gitattributes  .gitignore  .gn  BUILD.gn  Package.swift
Documentation/: Grammar.md  Types.md  Variables.md
Sources/BUILDEvaluator/: BUILD.gn  Builtins.swift  ExecutionError.swift  Expression+Evaluator.swift  Label.swift  Module.swift  Scope.swift  Target.swift  TargetCollector.swift  Template.swift  Value+Extractor.swift  Value.swift  Variables.swift
Sources/BUILDEvaluator/Extensions/: SourceRange+Extensions.swift  URL+Extensions.swift
Sources/BUILDParser/: ASTNodes.swift  BUILD.gn  Diagnostic.swift  DiagnosticSet.swift  Lexer.swift  Parser+Diagnostics.swift  Parser.swift  ParserState.swift  SourceFile.swift  SourceLocation.swift  SourceRange.swift  Token.swift
Sources/BUILDParser/Extensions/: Collections+Extensions.swift  StringProtocol+Extensions.swift
Sources/Tools/sb/: sb.swift
Sources/antimony/: Antimony.swift  BUILD.gn  Buildable.swift  Error.swift  JobEmitter.swift  NULLExecutor.swift  NinjaWriter.swift  SourceFile.swift
Sources/antimony/Configuration/: BuildConfiguration.swift  BuildConfigurationDelegate.swift  BuildConfigurationOptions.swift  Label.swift  Loader.swift  Target.swift
Sources/antimony/Extensions/: SwiftDriver+Extensions.swift
Tools/sb/: BUILD.gn  CLIOptions.swift  sb.swift
Tools/sb/Utils/: FileURL.swift
